--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
-    <section class="card" aria-label="card">
+    <main class="card" aria-label="card">
       <img
-        role="banner"
         class="card__img"
         src="assets/illustration-hero.svg"
         alt="A girl listening to the frontend mentor music playlist on mobile phone"
       />
 
-      <main class="card-main">
+      <section class="card-main">
         <h1 class="card-main__title">Order Summary</h1>
         <p class="card-main__description">
           You can now listen to millions of songs, audiobooks, and podcasts on any device
@@ -37,8 +36,8 @@
         </ul>
         <a href="#" class="pay-btn">Proceed to Payment</a>
         <button class="cancel-btn">Cancel Order</button>
-      </main>
-    </section>
+      </section>
+    </main>
     <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
